# ClimateGraph

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
ClimateGraph/: AppKernel.py  CLI.py  __init__.py  appkernel.py  cli.py
ClimateGraph/Data/: Collection.py  Data.py  InputData.py  PointSurface.py  RegularGrid.py
ClimateGraph/Data/DataReader/RegularGrid/: DefaultRG.py
ClimateGraph/Data/data/: __init__.py  data.py  point_surface.py  regular_grid.py
ClimateGraph/Data/reader/: __init__.py  reader.py
ClimateGraph/Data/reader/regular_grid/: __init__.py  chimere.py  default.py  wrf.py
ClimateGraph/Data/reader/satellite_swath/: __init__.py
ClimateGraph/Domain/: Domain.py  __init__.py  attribute.py
ClimateGraph/Utils/: InputReader.py  Models.py  Parser.py
ClimateGraph/data/: __init__.py  data.py  data_collection.py  point_surface.py  regular_grid.py  satellite_swath.py
ClimateGraph/data/data/: __init__.py  data.py  satellite_swath.py
ClimateGraph/domain/: __init__.py  attribute.py  domain.py  domains.py
ClimateGraph/plot/: __init__.py  plot.py  plots.py
ClimateGraph/reader/: __init__.py
ClimateGraph/reader/reader/: __init__.py  reader.py
ClimateGraph/reader/reader/point_surface/: __init__.py  dmc.py
ClimateGraph/reader/reader/regular_grid/: __init__.py  chimere.py  default.py  wrf.py
ClimateGraph/utils/: control_model.py  dataset_utils.py  general_utils.py  parser.py
test_data/: dmc-2010-2019.nc  test-definition.yaml  wrf-2019-01.nc  wrf-2019-02.nc  wrf_chim_dmc.yaml  wrf_dmc.yaml  wrf_dmc_shrinked.yaml
tests/: test_cli.py  test_parser.py  test_parser_2.py
tests/test_readers/: test_wrf.py
(+1 files in other folders)
